[package]
name = "TraderApp"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
chrono = "0.4.38"
serde = { version = "1.0.213", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.132"
argon2 = "0.5.3"
ring = "0.17.8"
base64 = "0.22.1"
tokio = { version = "1.41.0", features = ["full"] } # Async
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] } # WebSocket connections. Without native-tls will not work.  
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["blocking","json"] } # HTTP-requests
percent-encoding = "2.3.1"
hex = "0.4.3"
once_cell = "1.20.2"